--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Emotion Ad Test — Live KPIs</title>
+<title>Emotion-Only Ad Test — Live KPIs</title>
 <style>
   body { font-family: system-ui, Arial, sans-serif; margin:16px; background:#0f1115; color:#fff; }
   .row{display:flex;flex-wrap:wrap;gap:12px;align-items:flex-start}
@@ -16,13 +16,14 @@
   #diag{white-space:pre-wrap;font:12px ui-monospace;max-height:260px;overflow:auto;background:#0d1220;border:1px solid #222;border-radius:8px;padding:8px;margin-top:10px}
   .kpi{display:flex;gap:10px;margin-top:10px}
   .kpi>div{flex:1 1 0;background:#101520;border:1px solid #222;border-radius:10px;padding:10px;text-align:center}
+  .pill{display:inline-block;padding:2px 8px;border-radius:8px;background:#1f2433;margin-left:8px;font:12px ui-monospace}
 </style>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.18.0/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/face-api.js@0.22.2/dist/face-api.min.js"></script>
 </head>
 <body>
 
-<h2>Emotion-Only Ad Test (Webcam → PI / Brand / Awareness)</h2>
+<h2>Emotion-Only Ad Test <span class="pill">frames: <span id="pFrames">0</span></span> <span class="pill">faces: <span id="pFaces">0</span></span></h2>
 
 <div class="row">
   <div class="panel" style="flex:1 1 560px;">
@@ -40,7 +41,7 @@
     </div>
 
     <div style="margin-top:10px;display:flex;gap:10px;flex-wrap:wrap">
-      <button id="btnLoad">Load models</button>
+      <button id="btnLoad" disabled>Load models</button>
       <button id="btnPlay" disabled>Play & analyze</button>
       <button id="btnCSV" disabled>Download CSV</button>
       <button id="btnJSON" disabled>Download JSON</button>
@@ -59,53 +60,71 @@
   <div class="panel" style="flex:1 1 320px;">
     <b>Tips</b>
     <ul style="color:#9aa3b2">
-      <li>Light your face; look at the camera.</li>
-      <li>You should see a **box + landmarks** over your face once models load.</li>
-      <li>If DIAG shows probe 404s, model path is wrong.</li>
+      <li>You should see a box + landmarks on your face after models load.</li>
+      <li>If probes 404, your model path or filenames are off.</li>
+      <li>Good, frontal lighting helps a lot.</li>
     </ul>
   </div>
 </div>
 
 <script>
-  // 1) Paths / settings (GitHub Pages repo has a trailing dash)
+  // ===== Paths / settings =====
   const MODEL_URL = '/Emotion-Ai-/models';
   const SAMPLE_MS = 200;
 
-  // 2) DOM
+  // ===== DOM =====
   const $ = id => document.getElementById(id);
   const ad = $('ad'), cam = $('cam'), canv = $('overlay'), ctx = canv.getContext('2d');
   const statusEl = $('status'), diagEl = $('diag');
   const piEl=$('pi'), bpEl=$('bp'), awrEl=$('awr');
+  const pFramesEl=$('pFrames'), pFacesEl=$('pFaces');
 
-  // 3) State
-  let modelsReady = false, webcamReady=false, timer=null, started=false;
-  const frames = []; // per-frame emotions
-  let faceFrames = 0;
+  // ===== State =====
+  let modelsReady=false, webcamReady=false;
+  let timer=null;
+  const frames=[]; // per-frame emotions
+  let faceFrames=0;
 
-  // 4) Utils
+  // ===== Utils & DIAG =====
   const log = (...a)=> statusEl.textContent = a.join(' ');
   const diag = (...a)=> { console.log('[diag]',...a); diagEl.textContent += a.join(' ') + '\n'; };
   const clamp=(x,a,b)=>Math.min(b,Math.max(a,x));
+  function updateReady(label=''){
+    const ready = (webcamReady===true) && (modelsReady===true);
+    $('btnPlay').disabled = !ready;
+    diag(`READY? ${ready} (webcamReady=${webcamReady} modelsReady=${modelsReady}) ${label}`);
+  }
+  window.addEventListener('error', e => {
+    diag(`JS ERROR: ${e.message} @ ${e.filename}:${e.lineno}`);
+  });
+  window.addEventListener('unhandledrejection', e => {
+    diag(`Promise REJECTION: ${e.reason}`);
+  });
 
-  // 5) Webcam
+  // ===== Webcam =====
   async function startWebcam(){
-    diag('Requesting webcam…');
-    const st = await navigator.mediaDevices.getUserMedia({ video:{facingMode:'user', width:{ideal:640}, height:{ideal:480}}, audio:false });
-    cam.srcObject = st; await cam.play();
-    await new Promise(r=>cam.onloadedmetadata=r);
-    canv.width = cam.videoWidth; canv.height = cam.videoHeight;
-    webcamReady = true; log(`Webcam ready ${canv.width}x${canv.height}`);
-    $('btnPlay').disabled = !modelsReady;
+    try{
+      diag('Requesting webcam…');
+      const st = await navigator.mediaDevices.getUserMedia({ video:{facingMode:'user', width:{ideal:640}, height:{ideal:480}}, audio:false });
+      cam.srcObject = st; await cam.play();
+      await new Promise(r => cam.onloadedmetadata = r);
+      canv.width = cam.videoWidth || 640; canv.height = cam.videoHeight || 480;
+      webcamReady = true; log(`Webcam ready ${canv.width}x${canv.height}`);
+      $('btnLoad').disabled = false;
+      updateReady('[after webcam]');
+    }catch(e){
+      diag('webcam error:', e?.message || e); alert('Camera error: ' + (e?.message || e));
+    }
   }
 
-  // 6) Models
+  // ===== Models =====
   async function loadModels(){
     try{
       const probe = async f => {
-        const url = `${MODEL_URL}/${f}`;
+        const url = `${MODEL_URL}/${f}?v=${Date.now()}`;
         diag('Probe:', url);
         const r = await fetch(url, { cache:'no-store' });
-        if(!r.ok) throw new Error(`${r.status} ${url}`);
+        if(!r.ok) throw new Error(`HTTP ${r.status} for ${url}`);
       };
       await probe('tiny_face_detector_model-weights_manifest.json');
       await probe('face_landmark_68_model-weights_manifest.json');
@@ -117,14 +136,14 @@
       await faceapi.nets.faceExpressionNet.loadFromUri(MODEL_URL);
       modelsReady = true;
       diag('MODELS: OK ✔ tinyFace + landmarks68 + expressions');
-      $('btnPlay').disabled = !webcamReady;
+      updateReady('[after models]');
     }catch(e){
-      diag('Model load ERROR:', e.message);
+      diag('Model load ERROR:', e?.message || e);
       log('Model load failed — check DIAG URLs');
     }
   }
 
-  // 7) Detection (aggressive retries)
+  // ===== Detection (aggressive) =====
   async function detectOnce(videoEl){
     const tries = [
       { inputSize: 320, scoreThreshold: 0.12 },
@@ -138,16 +157,14 @@
         .detectAllFaces(videoEl, new faceapi.TinyFaceDetectorOptions(opt))
         .withFaceLandmarks().withFaceExpressions();
       if (res && res.length){
-        // pick highest-score face
         return res.reduce((b,c)=> c.detection.score > (b?.detection.score||0) ? c : b, null);
       }
     }
     return null;
   }
 
-  // 8) Sampling loop
+  // ===== Sampling loop =====
   async function tick(){
-    // draw webcam
     ctx.clearRect(0,0,canv.width,canv.height);
     ctx.drawImage(cam, 0, 0, canv.width, canv.height);
 
@@ -164,18 +181,16 @@
         row.disgusted=+(e.disgusted||0); row.fearful=+(e.fearful||0);
         row.surprised=+(e.surprised||0); row.neutral=+(e.neutral||0);
         row.face=1;
-        faceFrames++;
+
+        faceFrames++; pFacesEl.textContent=String(faceFrames);
         if (faceFrames % 20 === 0) diag(`faces so far: ${faceFrames} / frames ${frames.length}`);
         diag(`expr t=${row.t.toFixed(2)} happy=${row.happy.toFixed(2)} sad=${row.sad.toFixed(2)} ang=${row.angry.toFixed(2)} dis=${row.disgusted.toFixed(2)} surp=${row.surprised.toFixed(2)} fear=${row.fearful.toFixed(2)}`);
-      } else {
-        // no face this tick
-        // diag('No face this frame');  // uncomment if you want more spam
       }
     }
-    frames.push(row);
+    frames.push(row); pFramesEl.textContent=String(frames.length);
   }
 
-  // 9) KPI calc (simple, live-data based)
+  // ===== KPIs =====
   function calcKPIs(){
     const valid = frames.filter(f=>f.face);
     const total = valid.length || 1;
@@ -185,7 +200,7 @@
     const awareFrames = valid.filter(f => (f.happy>0.15)||(f.sad>0.15)||(f.angry>0.15)||(f.surprised>0.15)||(f.fearful>0.15)).length;
 
     const PI  = clamp( (posFrames/total)*100, 0, 100 );
-    const BP  = clamp( ((posFrames - negFrames)/total)*100 + 50, 0, 100 ); // net balance around 50
+    const BP  = clamp( ((posFrames - negFrames)/total)*100 + 50, 0, 100 ); // net balance centered at 50
     const AWR = clamp( (awareFrames/total)*100, 0, 100 );
 
     piEl.textContent  = PI.toFixed(1);
@@ -195,7 +210,7 @@
     return { PI:+PI.toFixed(1), BP:+BP.toFixed(1), AWR:+AWR.toFixed(1) };
   }
 
-  // 10) Exports
+  // ===== Exports =====
   function download(name, text, type='text/plain'){
     const blob = new Blob([text], {type}); const a=document.createElement('a');
     a.href=URL.createObjectURL(blob); a.download=name; a.click(); URL.revokeObjectURL(a.href);
@@ -207,15 +222,26 @@
     return lines.join('\n');
   }
 
-  // 11) Events
+  // ===== UI events =====
   $('btnLoad').addEventListener('click', loadModels);
 
   $('btnPlay').addEventListener('click', async () => {
-    frames.length = 0; faceFrames = 0;
-    ad.src = $('adUrl').value.trim();
-    try { await ad.play(); started = true; } catch(e){ log('Click the video to start playback'); }
+    frames.length = 0; faceFrames = 0; pFacesEl.textContent='0'; pFramesEl.textContent='0';
+    ad.src = ($('adUrl').value || '').trim() || 'ads/0813.mp4';
+
+    // Autoplay handling: try, then retry muted if blocked
+    try {
+      await ad.play();
+    } catch (e) {
+      diag('Autoplay blocked, retrying muted…');
+      ad.muted = true;
+      try { await ad.play(); }
+      catch (_) { log('Click the video once to start playback, then click Play & analyze again.'); return; }
+    }
+
     if (timer) clearInterval(timer);
     timer = setInterval(tick, SAMPLE_MS);
+    log('Analyzing…');
   });
 
   ad.addEventListener('ended', () => {
@@ -232,12 +258,21 @@
     download(`report_${Date.now()}.json`, JSON.stringify(report, null, 2), 'application/json');
   });
 
-  // 12) Boot
+  // ===== Boot =====
   (async () => {
-    log('Booting…');
+    diagEl.textContent = 'DIAG:\nPage loaded. Booting…\n';
     await startWebcam();
-    // enable Load Models so you can see DIAG probes before analyzing
-    $('btnLoad').disabled = false;
+    loadModels(); // auto-load so you see probe logs immediately
+    // Safety net: if both are ready but button didn't flip, force-enable after 3s
+    setTimeout(() => {
+      if (webcamReady && modelsReady) {
+        const btn = $('btnPlay');
+        if (btn && btn.disabled) {
+          btn.disabled = false;
+          diag('WARN: Forcing Play button enabled (both ready).');
+        }
+      }
+    }, 3000);
   })();
 </script>
 </body>
